traces/bug_64.txt
examples++-load/MetricKuate.cpp:187: error: DEAD_STORE
  The value written to &condition (type int) is never used.
Showing all 1 steps of the trace


examples++-load/MetricKuate.cpp:187:2: Write of unused value
185.    //------------------------------------------------------------------------
186.   
187.    int condition = -1;
        ^
188.   
189.    if(r0<=epsilon0)epsilon0=r0*epsilon0;
